[gd_scene load_steps=90 format=2]

[ext_resource path="res://Scripts/Maps/InteriorMonolith.gd" type="Script" id=1]
[ext_resource path="res://Backgrounds/sprite156_0.png" type="Texture" id=2]
[ext_resource path="res://Backgrounds/fondecr_0.png" type="Texture" id=3]
[ext_resource path="res://Backgrounds/fondecr_1.png" type="Texture" id=4]
[ext_resource path="res://Backgrounds/fondecr_2.png" type="Texture" id=5]
[ext_resource path="res://Backgrounds/fondecr_3.png" type="Texture" id=6]
[ext_resource path="res://Backgrounds/fondecr_4.png" type="Texture" id=7]
[ext_resource path="res://Backgrounds/fondecr_5.png" type="Texture" id=8]
[ext_resource path="res://Backgrounds/fondecr_6.png" type="Texture" id=9]
[ext_resource path="res://Backgrounds/fondecr_7.png" type="Texture" id=10]
[ext_resource path="res://Backgrounds/fondecr_8.png" type="Texture" id=11]
[ext_resource path="res://Backgrounds/Monolith.png" type="Texture" id=12]
[ext_resource path="res://Backgrounds/pont_0.png" type="Texture" id=13]
[ext_resource path="res://Backgrounds/pont_1.png" type="Texture" id=14]
[ext_resource path="res://Backgrounds/pont_2.png" type="Texture" id=15]
[ext_resource path="res://Backgrounds/pont_3.png" type="Texture" id=16]
[ext_resource path="res://Backgrounds/pont_4.png" type="Texture" id=17]
[ext_resource path="res://Backgrounds/pont_5.png" type="Texture" id=18]
[ext_resource path="res://Backgrounds/pont_6.png" type="Texture" id=19]
[ext_resource path="res://Backgrounds/pont_7.png" type="Texture" id=20]
[ext_resource path="res://Backgrounds/pont_8.png" type="Texture" id=21]
[ext_resource path="res://Backgrounds/pont_9.png" type="Texture" id=22]
[ext_resource path="res://Backgrounds/pont_10.png" type="Texture" id=23]
[ext_resource path="res://Backgrounds/pont_11.png" type="Texture" id=24]
[ext_resource path="res://Backgrounds/pont_12.png" type="Texture" id=25]
[ext_resource path="res://Backgrounds/pont_13.png" type="Texture" id=26]
[ext_resource path="res://Backgrounds/pont_14.png" type="Texture" id=27]
[ext_resource path="res://Backgrounds/pont_15.png" type="Texture" id=28]
[ext_resource path="res://Backgrounds/pont_16.png" type="Texture" id=29]
[ext_resource path="res://Backgrounds/pont_17.png" type="Texture" id=30]
[ext_resource path="res://Backgrounds/pont_18.png" type="Texture" id=31]
[ext_resource path="res://Backgrounds/pont_19.png" type="Texture" id=32]
[ext_resource path="res://Backgrounds/pont_20.png" type="Texture" id=33]
[ext_resource path="res://Backgrounds/pont_21.png" type="Texture" id=34]
[ext_resource path="res://Backgrounds/pont_22.png" type="Texture" id=35]
[ext_resource path="res://Backgrounds/pont_23.png" type="Texture" id=36]
[ext_resource path="res://Backgrounds/pont_24.png" type="Texture" id=37]
[ext_resource path="res://Backgrounds/pont_25.png" type="Texture" id=38]
[ext_resource path="res://Backgrounds/round_0.png" type="Texture" id=39]
[ext_resource path="res://Backgrounds/round_1.png" type="Texture" id=40]
[ext_resource path="res://Backgrounds/round_2.png" type="Texture" id=41]
[ext_resource path="res://Backgrounds/square_0.png" type="Texture" id=42]
[ext_resource path="res://Backgrounds/square_1.png" type="Texture" id=43]
[ext_resource path="res://Backgrounds/square_2.png" type="Texture" id=44]
[ext_resource path="res://Backgrounds/Screen/screen_charge_0.png" type="Texture" id=45]
[ext_resource path="res://Backgrounds/Screen/screen_charge_1.png" type="Texture" id=46]
[ext_resource path="res://Backgrounds/Screen/screen_charge_2.png" type="Texture" id=47]
[ext_resource path="res://Backgrounds/Screen/screen_charge_3.png" type="Texture" id=48]
[ext_resource path="res://Backgrounds/Screen/screen_charge_4.png" type="Texture" id=49]
[ext_resource path="res://Backgrounds/Screen/screen_charge_5.png" type="Texture" id=50]
[ext_resource path="res://Backgrounds/Screen/screen_charge_6.png" type="Texture" id=51]
[ext_resource path="res://Backgrounds/Screen/screen_charge_7.png" type="Texture" id=52]
[ext_resource path="res://Backgrounds/Screen/screen_charge_8.png" type="Texture" id=53]
[ext_resource path="res://Backgrounds/Screen/screen_charge_9.png" type="Texture" id=54]
[ext_resource path="res://Backgrounds/Screen/screen_charge_10.png" type="Texture" id=55]
[ext_resource path="res://Backgrounds/Screen/screen_end_2.png" type="Texture" id=56]
[ext_resource path="res://Backgrounds/Screen/screen_end_3.png" type="Texture" id=57]
[ext_resource path="res://Backgrounds/Screen/screen_end_4.png" type="Texture" id=58]
[ext_resource path="res://Backgrounds/Screen/screen_luniens_0.png" type="Texture" id=59]
[ext_resource path="res://Backgrounds/Screen/screen_luniens_1.png" type="Texture" id=60]
[ext_resource path="res://Backgrounds/Screen/trawTRAW_0.png" type="Texture" id=61]
[ext_resource path="res://Backgrounds/Screen/trawTRAW_1.png" type="Texture" id=62]
[ext_resource path="res://Sprites/Cinematics/Begin/back11-1.png" type="Texture" id=63]
[ext_resource path="res://Sprites/Cinematics/Begin/back11-2.png" type="Texture" id=64]
[ext_resource path="res://Sprites/Cinematics/Begin/back11-3.png" type="Texture" id=65]
[ext_resource path="res://Sprites/Cinematics/Begin/back11-4.png" type="Texture" id=66]
[ext_resource path="res://Sprites/Cinematics/Begin/back11-5.png" type="Texture" id=67]
[ext_resource path="res://Sprites/Cinematics/Begin/back11-6.png" type="Texture" id=68]
[ext_resource path="res://Sprites/Cinematics/Begin/back11-7.png" type="Texture" id=69]
[ext_resource path="res://Sprites/Cinematics/Begin/back11-8.png" type="Texture" id=70]
[ext_resource path="res://Sprites/Cinematics/Begin/back11-9.png" type="Texture" id=71]
[ext_resource path="res://Sprites/Cinematics/Begin/back11-10.png" type="Texture" id=72]
[ext_resource path="res://Backgrounds/Screen/bye_0.png" type="Texture" id=73]
[ext_resource path="res://Backgrounds/Screen/bye_1.png" type="Texture" id=74]
[ext_resource path="res://Backgrounds/Screen/laugh_0.png" type="Texture" id=75]
[ext_resource path="res://Backgrounds/Screen/laugh_1.png" type="Texture" id=76]
[ext_resource path="res://Scenes/Props/PNJ.tscn" type="PackedScene" id=77]
[ext_resource path="res://Scenes/Player/player.tscn" type="PackedScene" id=78]
[ext_resource path="res://Scenes/Other/Transition.tscn" type="PackedScene" id=79]
[ext_resource path="res://Scenes/Maps/dialogpiq.tscn" type="PackedScene" id=80]
[ext_resource path="res://Scenes/Player/GUICanvas.tscn" type="PackedScene" id=81]
[ext_resource path="res://Scenes/Player/mouse.tscn" type="PackedScene" id=82]
[ext_resource path="res://Sons/Ambiance_Monodecol.wav" type="AudioStream" id=83]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 5 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 43 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 45 ) ],
"loop": true,
"name": "wait",
"speed": 5.0
}, {
"frames": [ ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ) ],
"loop": true,
"name": "charge",
"speed": 6.0
}, {
"frames": [ ExtResource( 56 ), ExtResource( 57 ), ExtResource( 58 ) ],
"loop": true,
"name": "bug",
"speed": 10.0
}, {
"frames": [ ExtResource( 59 ), ExtResource( 60 ) ],
"loop": true,
"name": "luniens",
"speed": 2.0
} ]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ ExtResource( 61 ), ExtResource( 62 ) ],
"loop": true,
"name": "traw",
"speed": 8.0
}, {
"frames": [ ExtResource( 63 ), ExtResource( 64 ), ExtResource( 65 ), ExtResource( 66 ), ExtResource( 67 ), ExtResource( 68 ), ExtResource( 69 ), ExtResource( 70 ), ExtResource( 71 ), ExtResource( 72 ) ],
"loop": true,
"name": "eyes",
"speed": 8.0
}, {
"frames": [ ExtResource( 73 ), ExtResource( 74 ) ],
"loop": true,
"name": "bye",
"speed": 3.0
}, {
"frames": [ ExtResource( 75 ), ExtResource( 76 ) ],
"loop": true,
"name": "laugh",
"speed": 5.0
} ]

[node name="InteriorMonolith" type="Node"]
script = ExtResource( 1 )

[node name="Node2D" type="Node2D" parent="."]

[node name="fd" type="Sprite" parent="Node2D"]
position = Vector2( 254.403, 561.806 )
scale = Vector2( 5, 8.36 )
z_index = -10
texture = ExtResource( 2 )

[node name="fondecr" type="AnimatedSprite" parent="Node2D"]
position = Vector2( 256.081, 218.01 )
z_index = -10
frames = SubResource( 1 )
frame = 12
playing = true

[node name="fond" type="Sprite" parent="Node2D"]
position = Vector2( 256.086, 511.979 )
z_index = -10
texture = ExtResource( 12 )

[node name="pont" type="Node2D" parent="Node2D"]
editor/display_folded = true
modulate = Color( 1, 1, 1, 0.262745 )
z_index = -10

[node name="pontanim" type="AnimatedSprite" parent="Node2D/pont"]
position = Vector2( 256.061, 539.008 )
frames = SubResource( 2 )
frame = 21
playing = true

[node name="pontanim2" type="AnimatedSprite" parent="Node2D/pont"]
position = Vector2( 256.065, 589.006 )
frames = SubResource( 2 )
frame = 21
playing = true

[node name="pontanim3" type="AnimatedSprite" parent="Node2D/pont"]
position = Vector2( 256.057, 639.013 )
frames = SubResource( 2 )
frame = 21
playing = true

[node name="pontanim4" type="AnimatedSprite" parent="Node2D/pont"]
position = Vector2( 256.06, 689.011 )
frames = SubResource( 2 )
frame = 21
playing = true

[node name="pontanim5" type="AnimatedSprite" parent="Node2D/pont"]
position = Vector2( 256.057, 739.018 )
frames = SubResource( 2 )
frame = 21
playing = true

[node name="pontanim6" type="AnimatedSprite" parent="Node2D/pont"]
position = Vector2( 256.06, 789.016 )
frames = SubResource( 2 )
frame = 21
playing = true

[node name="pontanim7" type="AnimatedSprite" parent="Node2D/pont"]
position = Vector2( 256.052, 839.023 )
frames = SubResource( 2 )
frame = 21
playing = true

[node name="pontanim8" type="AnimatedSprite" parent="Node2D/pont"]
position = Vector2( 256.056, 889.021 )
frames = SubResource( 2 )
frame = 21
playing = true

[node name="pontanim9" type="AnimatedSprite" parent="Node2D/pont"]
position = Vector2( 256.046, 939.017 )
frames = SubResource( 2 )
frame = 21
playing = true

[node name="pontanim10" type="AnimatedSprite" parent="Node2D/pont"]
position = Vector2( 256.049, 989.015 )
frames = SubResource( 2 )
frame = 21
playing = true

[node name="pontanim11" type="AnimatedSprite" parent="Node2D/pont"]
position = Vector2( 256.041, 1039.02 )
frames = SubResource( 2 )
frame = 21
playing = true

[node name="pontanim12" type="AnimatedSprite" parent="Node2D/pont"]
position = Vector2( 256.045, 1089.02 )
frames = SubResource( 2 )
frame = 21
playing = true

[node name="rounds" type="Node2D" parent="Node2D"]
editor/display_folded = true

[node name="round" type="AnimatedSprite" parent="Node2D/rounds"]
position = Vector2( 164.452, 523.586 )
frames = SubResource( 3 )
frame = 1
playing = true

[node name="round2" type="AnimatedSprite" parent="Node2D/rounds"]
position = Vector2( 392.232, 655.527 )
frames = SubResource( 3 )
playing = true

[node name="round3" type="AnimatedSprite" parent="Node2D/rounds"]
position = Vector2( 93.7788, 694.718 )
frames = SubResource( 3 )
playing = true

[node name="round4" type="AnimatedSprite" parent="Node2D/rounds"]
position = Vector2( 381.68, 789.68 )
frames = SubResource( 3 )
playing = true

[node name="round5" type="AnimatedSprite" parent="Node2D/rounds"]
position = Vector2( 135.548, 886.374 )
frames = SubResource( 3 )
frame = 2
playing = true

[node name="round6" type="AnimatedSprite" parent="Node2D/rounds"]
position = Vector2( 449.861, 920.255 )
frames = SubResource( 3 )
frame = 2
playing = true

[node name="round7" type="AnimatedSprite" parent="Node2D/rounds"]
position = Vector2( 74.749, 990.746 )
frames = SubResource( 3 )
frame = 1
playing = true

[node name="round8" type="AnimatedSprite" parent="Node2D/rounds"]
position = Vector2( 415.715, 475.854 )
frames = SubResource( 3 )
frame = 1
playing = true

[node name="square" type="AnimatedSprite" parent="Node2D/rounds"]
position = Vector2( 126.026, 588.88 )
frames = SubResource( 4 )
frame = 3
playing = true

[node name="square2" type="AnimatedSprite" parent="Node2D/rounds"]
position = Vector2( 380.599, 543.228 )
frames = SubResource( 4 )
frame = 2
playing = true

[node name="square3" type="AnimatedSprite" parent="Node2D/rounds"]
position = Vector2( 350.682, 702.784 )
frames = SubResource( 4 )
frame = 2
playing = true

[node name="square4" type="AnimatedSprite" parent="Node2D/rounds"]
position = Vector2( 122.078, 794.926 )
frames = SubResource( 4 )
frame = 2
playing = true

[node name="square5" type="AnimatedSprite" parent="Node2D/rounds"]
position = Vector2( 381.34, 879.337 )
frames = SubResource( 4 )
frame = 1
playing = true

[node name="square6" type="AnimatedSprite" parent="Node2D/rounds"]
position = Vector2( 157.416, 971.867 )
frames = SubResource( 4 )
frame = 1
playing = true

[node name="square7" type="AnimatedSprite" parent="Node2D/rounds"]
position = Vector2( 338.776, 970.017 )
frames = SubResource( 4 )
frame = 1
playing = true

[node name="square8" type="AnimatedSprite" parent="Node2D/rounds"]
position = Vector2( 177.772, 692.425 )
frames = SubResource( 4 )
frame = 1
playing = true

[node name="square9" type="AnimatedSprite" parent="Node2D/rounds"]
position = Vector2( 455.365, 598.043 )
frames = SubResource( 4 )
playing = true

[node name="square10" type="AnimatedSprite" parent="Node2D/rounds"]
position = Vector2( 68.5862, 471.461 )
frames = SubResource( 4 )
frame = 3
playing = true

[node name="square11" type="AnimatedSprite" parent="Node2D/rounds"]
position = Vector2( 64.2692, 872.936 )
frames = SubResource( 4 )
frame = 3
playing = true

[node name="square12" type="AnimatedSprite" parent="Node2D/rounds"]
position = Vector2( 455.82, 724.887 )
frames = SubResource( 4 )
frame = 2
playing = true

[node name="screen" type="AnimatedSprite" parent="Node2D"]
position = Vector2( 256.294, 279.881 )
frames = SubResource( 5 )
playing = true

[node name="traw" type="AnimatedSprite" parent="Node2D"]
position = Vector2( 255.518, 324.043 )
frames = SubResource( 6 )
playing = true

[node name="Team" type="Node2D" parent="Node2D"]
position = Vector2( -1000, 0 )

[node name="01Tog0" parent="Node2D/Team" instance=ExtResource( 77 )]
position = Vector2( 292.772, 446.091 )
animation = "01Tog"

[node name="01Doubliks0" parent="Node2D/Team" instance=ExtResource( 77 )]
position = Vector2( 217.066, 436.622 )
animation = "01Doubliks"
frame = 1

[node name="01Progfer0" parent="Node2D/Team" instance=ExtResource( 77 )]
position = Vector2( 230.71, 466.551 )
animation = "01Progfer"

[node name="player" parent="Node2D" instance=ExtResource( 78 )]
position = Vector2( 255.006, 445.564 )

[node name="walls" type="StaticBody2D" parent="Node2D"]
collision_mask = 7

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Node2D/walls"]
scale = Vector2( 1.06851, 0.973961 )
polygon = PoolVector2Array( 173.258, 506.078, 199.407, 506.078, 199.433, 1143.88, 127.745, 1144.21, 136.777, 375.181, 341.766, 379.168, 343.879, 1214.2, 197.892, 1213.84, 199.617, 1144.7, 280.103, 1144.38, 280.051, 506.066, 306.104, 506.153, 306.07, 427.038, 173.227, 427.198 )

[node name="11321274ForetChlorozol" parent="Node2D" instance=ExtResource( 79 )]
position = Vector2( 255.896, 1064.84 )
scale = Vector2( 8.44, 7.56 )

[node name="1luniens" parent="Node2D" instance=ExtResource( 80 )]
position = Vector2( 255.622, 423.767 )
scale = Vector2( 2.3819, 1 )

[node name="CanvasLayer" parent="." instance=ExtResource( 81 )]

[node name="mouse" parent="CanvasLayer" instance=ExtResource( 82 )]

[node name="Charge" type="Timer" parent="."]

[node name="Timer" type="Timer" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 83 )
[connection signal="animation_finished" from="Node2D/screen" to="." method="_on_screen_animation_finished"]
[connection signal="animation_finished" from="Node2D/traw" to="." method="_on_traw_animation_finished"]
[connection signal="timeout" from="Charge" to="." method="_on_Charge_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
